--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,39 +9,13 @@
   <% @products.each do |product| %>
     <tr>
       <td>product.title</td>
-      <td></td>
+
+      <td><%= link_to 'Sell a Product', products_path(product),
+              method: :alert,
+              data: { confirm: 'You have not selected a category' } %></td>
       <td></td>
     </tr>
     <% end %>
 </table>
 
-<%= link_to 'Sell a Product', new_article_path  %>
-
-
-
-
-    class CreateProducts < ActiveRecord::Migration[5.1]
-  def change
-    create_table :products do |t|
-      t.string :title
-      t.string :category
-      t.string :type
-      t.float :price
-      t.boolean :delivery
-      t.references :user, foreign_key: true
-
-      t.timestamps
-    end
-  end
-end
-
-
-
-Given a user is authenticated
-And performs a gesture on the Sell a product hyperlink
-When the product form is rendered
-Then there should be a dropdown that displays all product categories
-
-Given a user has filled out the product form, but not chosen a category
-When the user clicks on the Sell button
-Then the user should be alerted to select a product category
+<%# <%= link_to 'Sell a Product', new_article_path %>
