WIP t#13 some moreee

--- a/app/views/products/form.html.erb
+++ b/app/views/products/form.html.erb
@@ -8,7 +8,7 @@
   <p>
     <%# Then there should be a dropdown that displays all product categories %>
     <%=  form.category%>
-    <%=  %>
+    <%=  form.display %>
   </p>
 
   <p>
