--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,3 +19,7 @@
 </table>
 
 <%# <%= link_to 'Sell a Product', new_article_path %>
+
+<%# Given a user has filled out the product form, but not chosen a category
+When the user clicks on the Sell button
+Then the user should be alerted to select a product category %>
