--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -8,7 +8,7 @@
   <p>
     <%# Then there should be a dropdown that displays all product categories %>
     <%=  form.category%>
-    <%=  form.display %>
+    <%=  form.collection_select @products.categories %>
   </p>
 
   <p>
