--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -46,12 +46,8 @@
 
   <p>
     <%= form.label :delivery %><br>
+    make this a boolean!!!
     <%= form.text_field :delivery %>
-  </p>
-
-  <p>
-    <%= form.label :city %><br>
-    <%= form.text_field :city %>
   </p>
 
   <p>
