removed :city reference from product, added requirement to the user.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,7 +17,7 @@
     <br>
     <%= link_to "Log In", login_path %>
      <br>
-    <%= link_to 'View Products', products_path %> %>
+    <%= link_to 'View Products', products_path %> 
   <% end %>
 </div>
 
