--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,7 +26,7 @@
   </div>
     <div class="field">
     <%= f.label :city %><br />
-    <%= f.city :city %>
+    <%= f.text_field :city %>
   </div>
 
   <div class="actions"><%= f.submit "Sign Up" %></div>
